# src/api/models/CreateClassRequest.ts
@@ -1,0 +1,66 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Backend API
+ * API documentation for the backend service
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface CreateClassRequest
+ */
+export interface CreateClassRequest {
+    /**
+     * 
+     * @type {string}
+     * @memberof CreateClassRequest
+     */
+    name: string;
+}
+
+/**
+ * Check if a given object implements the CreateClassRequest interface.
+ */
+export function instanceOfCreateClassRequest(value: object): value is CreateClassRequest {
+    if (!('name' in value) || value['name'] === undefined) return false;
+    return true;
+}
+
+export function CreateClassRequestFromJSON(json: any): CreateClassRequest {
+    return CreateClassRequestFromJSONTyped(json, false);
+}
+
+export function CreateClassRequestFromJSONTyped(json: any, ignoreDiscriminator: boolean): CreateClassRequest {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'name': json['name'],
+    };
+}
+
+export function CreateClassRequestToJSON(json: any): CreateClassRequest {
+    return CreateClassRequestToJSONTyped(json, false);
+}
+
+export function CreateClassRequestToJSONTyped(value?: CreateClassRequest | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'name': value['name'],
+    };
+}
+
