# src/api/models/SchoolClass.ts
@@ -1,0 +1,97 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Backend API
+ * API documentation for the backend service
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface SchoolClass
+ */
+export interface SchoolClass {
+    /**
+     * 
+     * @type {number}
+     * @memberof SchoolClass
+     */
+    id?: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof SchoolClass
+     */
+    name?: string;
+    /**
+     * 
+     * @type {number}
+     * @memberof SchoolClass
+     */
+    createdBy?: number | null;
+    /**
+     * 
+     * @type {Date}
+     * @memberof SchoolClass
+     */
+    createdAt?: Date | null;
+    /**
+     * 
+     * @type {Date}
+     * @memberof SchoolClass
+     */
+    updatedAt?: Date | null;
+}
+
+/**
+ * Check if a given object implements the SchoolClass interface.
+ */
+export function instanceOfSchoolClass(value: object): value is SchoolClass {
+    return true;
+}
+
+export function SchoolClassFromJSON(json: any): SchoolClass {
+    return SchoolClassFromJSONTyped(json, false);
+}
+
+export function SchoolClassFromJSONTyped(json: any, ignoreDiscriminator: boolean): SchoolClass {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'id': json['id'] == null ? undefined : json['id'],
+        'name': json['name'] == null ? undefined : json['name'],
+        'createdBy': json['createdBy'] == null ? undefined : json['createdBy'],
+        'createdAt': json['createdAt'] == null ? undefined : (new Date(json['createdAt'])),
+        'updatedAt': json['updatedAt'] == null ? undefined : (new Date(json['updatedAt'])),
+    };
+}
+
+export function SchoolClassToJSON(json: any): SchoolClass {
+    return SchoolClassToJSONTyped(json, false);
+}
+
+export function SchoolClassToJSONTyped(value?: SchoolClass | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'id': value['id'],
+        'name': value['name'],
+        'createdBy': value['createdBy'],
+        'createdAt': value['createdAt'] == null ? value['createdAt'] : value['createdAt'].toISOString(),
+        'updatedAt': value['updatedAt'] == null ? value['updatedAt'] : value['updatedAt'].toISOString(),
+    };
+}
+
