# src/api/models/index.ts
@@ -1,13 +1,20 @@
 /* tslint:disable */
 /* eslint-disable */
+export * from './AiQueryPost200Response';
 export * from './AuthLoginEndPost200Response';
 export * from './AuthLoginStartPost200Response';
 export * from './AuthRegisterPost400Response';
 export * from './AuthSessionGet200Response';
+export * from './ClassesGet200Response';
+export * from './ClassesPost201Response';
+export * from './CreateClassRequest';
+export * from './FreeQueryRequest';
 export * from './LoginEndRequest';
 export * from './LoginStartRequest';
 export * from './ModelApiResponse';
 export * from './RefreshRequest';
 export * from './RegisterRequest';
+export * from './SchoolClass';
+export * from './UpdateClassRequest';
 export * from './User';
 export * from './ValidationErrorResponse';
